# robotcraft-model-description

./: .gitignore  CMakeLists.txt  README.md  package.xml  robotcraft2019_robot.rviz
launch/: display_robotcraft2019.launch
urdf/: robotcraft2019.urdf
