<?xml version="1.0"?>
<package>
  <name>robotcraft-model-description</name>
  <version>0.0.0</version>
  <description>robotcraft-model-description provides a complete 3D model of the Robot of RobotCraft 2019 for simulation and visualization</description>
  <maintainer email="welcome@ingeniarius.pt">Ingeniarius</maintainer>  
  <license>MIT</license>
  <author email="welcome@ingeniarius.pt">Ingeniarius</author>  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>  
  <run_depend>urdf</run_depend>  
  <run_depend>state_publisher</run_depend>  
</package>



 
